<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="br.cericatto.easynvest.result.ResultViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--=============== FIRST CONTAINER ===============-->

        <LinearLayout
            android:id="@+id/first_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/simulation_result__label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/simulation_result__label"
                android:textSize="18sp" />

            <TextView
                style="@style/Marquee_TextView"
                android:id="@+id/simulation_result__value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@{viewModel.simulationResultValue}"
                android:textColor="@color/black"
                android:textSize="64sp"
                tools:text="@string/simulation_result__value" />

            <TextView
                android:id="@+id/total_earned__value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:easyColoredTextView="@{viewModel.earnedValueForColored}"
                tools:text="@string/total_investment__value"
                android:textSize="18sp" />
        </LinearLayout>

        <!--=============== SECOND CONTAINER ===============-->

        <ScrollView
            android:id="@+id/second_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:context=".ResultFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Initial Value -->

                <TextView
                    android:id="@+id/initial_value__label"
                    style="@style/Result_LabelTextView"
                    android:text="@string/initial_applied__label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/initial_value__value"
                    style="@style/Result_ValueTextView"
                    android:text="@{viewModel.initialValue}"
                    app:layout_constraintStart_toEndOf="@+id/initial_value__label"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/initial_applied__value" />

                <!-- Raw Value -->

                <TextView
                    android:id="@+id/raw_value__label"
                    style="@style/Result_LabelTextView"
                    android:text="@string/gross_invesment_amount__label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/initial_value__label" />

                <TextView
                    android:id="@+id/raw_value__value"
                    style="@style/Result_ValueTextView"
                    android:text="@{viewModel.rawValue}"
                    app:layout_constraintStart_toEndOf="@+id/raw_value__label"
                    app:layout_constraintTop_toBottomOf="@+id/initial_value__label"
                    tools:text="@string/gross_invesment_amount__value" />

                <!-- Earned Value -->

                <TextView
                    android:id="@+id/earned_value__label"
                    style="@style/Result_LabelTextView"
                    android:text="@string/income__label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/raw_value__label" />

                <TextView
                    android:id="@+id/earned_value__value"
                    style="@style/Result_ValueTextView"
                    android:text="@{viewModel.earnedValue}"
                    app:layout_constraintStart_toEndOf="@+id/earned_value__label"
                    app:layout_constraintTop_toBottomOf="@+id/raw_value__label"
                    tools:text="@string/income__value" />

                <!-- IR -->

                <TextView
                    android:id="@+id/ir_value__label"
                    style="@style/Result_LabelTextView"
                    android:text="@string/investment_tax__label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/earned_value__label" />

                <TextView
                    android:id="@+id/ir_value__value"
                    style="@style/Result_MarqueeValueTextView"
                    android:text="@{viewModel.formattedTaxValue}"
                    app:layout_constraintStart_toEndOf="@+id/ir_value__label"
                    app:layout_constraintTop_toBottomOf="@+id/earned_value__label"
                    tools:text="@string/investment_tax__value" />

                <!-- IR -->

                <TextView
                    android:id="@+id/net_value__label"
                    style="@style/Result_LabelTextView"
                    android:text="@string/net_investment__label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ir_value__label" />

                <TextView
                    android:id="@+id/net_value__value"
                    style="@style/Result_ValueTextView"
                    android:text="@{viewModel.netValue}"
                    app:layout_constraintStart_toEndOf="@+id/net_value__label"
                    app:layout_constraintTop_toBottomOf="@+id/ir_value__label"
                    tools:text="@string/net_investment__value" />

                <!--=============== THIRD HEADER ===============-->

                <!-- Date -->

                <TextView
                    android:id="@+id/date__label"
                    style="@style/Result_LabelTextView"
                    android:layout_marginTop="40dp"
                    android:text="@string/redemption_date__label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/net_value__label" />

                <TextView
                    android:id="@+id/date__value"
                    style="@style/Result_ValueTextView"
                    android:layout_marginTop="40dp"
                    android:text="@{viewModel.dateValue}"
                    app:layout_constraintStart_toEndOf="@+id/date__label"
                    app:layout_constraintTop_toBottomOf="@+id/net_value__label"
                    tools:text="@string/redemption_date__value" />

                <!-- Days -->

                <TextView
                    android:id="@+id/days__label"
                    style="@style/Result_LabelTextView"
                    android:text="@string/running_days__label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/date__label" />

                <TextView
                    android:id="@+id/days__value"
                    style="@style/Result_ValueTextView"
                    android:text="@{viewModel.daysValue}"
                    app:layout_constraintStart_toEndOf="@+id/days__label"
                    app:layout_constraintTop_toBottomOf="@+id/date__label"
                    tools:text="@string/running_days__value" />

                <!-- Monthly Income -->

                <TextView
                    android:id="@+id/monthly_income__label"
                    style="@style/Result_LabelTextView"
                    android:text="@string/monthly_income__label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/days__label" />

                <TextView
                    android:id="@+id/monthly_income__value"
                    style="@style/Result_ValueTextView"
                    android:text="@{viewModel.monthlyIncomeValue}"
                    app:layout_constraintStart_toEndOf="@+id/monthly_income__label"
                    app:layout_constraintTop_toBottomOf="@+id/days__label"
                    tools:text="@string/monthly_income__value" />

                <!-- CDI -->

                <TextView
                    android:id="@+id/what_is_cdi_percentage__label"
                    style="@style/Result_LabelTextView"
                    android:text="@string/percentage_cdi__label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/monthly_income__label" />

                <TextView
                    android:id="@+id/cdi__value"
                    style="@style/Result_ValueTextView"
                    android:text="@{viewModel.cdiValue}"
                    app:layout_constraintStart_toEndOf="@+id/what_is_cdi_percentage__label"
                    app:layout_constraintTop_toBottomOf="@+id/monthly_income__label"
                    tools:text="@string/percentage_cdi__value" />

                <!-- Annual Profitability -->

                <TextView
                    android:id="@+id/annual_profitability__label"
                    style="@style/Result_LabelTextView"
                    android:text="@string/annual_profitability__label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/what_is_cdi_percentage__label" />

                <TextView
                    android:id="@+id/annual_profitability__value"
                    style="@style/Result_ValueTextView"
                    android:text="@{viewModel.annualProfitabilityValue}"
                    app:layout_constraintStart_toEndOf="@+id/annual_profitability__label"
                    app:layout_constraintTop_toBottomOf="@+id/what_is_cdi_percentage__label"
                    tools:text="@string/annual_profitability__value" />

                <!-- Period Profitability -->

                <TextView
                    android:id="@+id/period_profitability__label"
                    style="@style/Result_LabelTextView"
                    android:text="@string/period_profitability__label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/annual_profitability__label" />

                <TextView
                    android:id="@+id/period_profitability__value"
                    style="@style/Result_ValueTextView"
                    android:text="@{viewModel.periodProfitabilityValue}"
                    app:layout_constraintStart_toEndOf="@+id/period_profitability__label"
                    app:layout_constraintTop_toBottomOf="@+id/annual_profitability__label"
                    tools:text="@string/period_profitability__value" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <!--=============== THIRD CONTAINER ===============-->

        <LinearLayout
            android:id="@+id/third_container"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/simulate_again__button"
                style="@style/Style_Button"
                android:background="@drawable/border_round_ripple_teal__teal_background"
                android:gravity="center"
                android:text="@string/simulate_again__button" />
        </LinearLayout>
    </LinearLayout>
</layout>