<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="br.cericatto.easynvest.home.HomeViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--=============== FIRST CONTAINER ===============-->

            <ScrollView
                android:id="@+id/first_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                tools:context=".ResultFragment">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!-- How Much To Apply -->

                    <TextView
                        android:id="@+id/how_much_would_you_like_to_apply__label"
                        style="@style/Home_LabelTextView"
                        android:text="@string/how_much_would_you_like_to_apply__label"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/how_much_would_you_like_to_apply__edit_text"
                        style="@style/Home_EntryEditText"
                        android:hint="@string/how_much_would_you_like_to_apply__hint"
                        android:inputType="numberDecimal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/how_much_would_you_like_to_apply__label" />

                    <View
                        android:id="@+id/investment__separator"
                        style="@style/Home_ViewSeparator"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/how_much_would_you_like_to_apply__edit_text" />

                    <!-- Investment Maturity Date -->

                    <TextView
                        android:id="@+id/investment_maturity_date__label"
                        style="@style/Home_LabelTextView"
                        android:focusableInTouchMode="true"
                        android:text="@string/investment_maturity_date__label"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/how_much_would_you_like_to_apply__edit_text" />

                    <EditText
                        android:id="@+id/investment_maturity_date__edit_text"
                        style="@style/Home_EntryEditText"
                        android:enabled="true"
                        android:focusable="false"
                        android:hint="@string/investment_maturity_date__hint"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/investment_maturity_date__label" />

                    <View
                        android:id="@+id/maturity_date__separator"
                        style="@style/Home_ViewSeparator"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/investment_maturity_date__edit_text" />

                    <!-- CDI -->

                    <TextView
                        android:id="@+id/what_is_cdi_percentage__label"
                        style="@style/Home_LabelTextView"
                        android:text="@string/what_is_cdi_percentage__label"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/maturity_date__separator" />

                    <EditText
                        android:id="@+id/what_is_cdi_percentage__edit_text"
                        style="@style/Home_EntryEditText"
                        android:hint="@string/what_is_cdi_percentage__hint"
                        android:inputType="numberDecimal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/what_is_cdi_percentage__label" />

                    <View
                        android:id="@+id/cdi__separator"
                        style="@style/Home_ViewSeparator"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/what_is_cdi_percentage__edit_text" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>

            <!--=============== SECOND CONTAINER ===============-->

            <LinearLayout
                android:id="@+id/second_container"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/simulate__button"
                    style="@style/Style_Button"
                    android:background="@drawable/border_round_ripple_grey__grey_background"
                    android:onClick="@{() -> viewModel.getEasynvestData()}"
                    android:text="@string/simulate__button"
                    app:easyButtonEnabled="@{viewModel.simulateButtonVisible}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cdi__separator" />
            </LinearLayout>
        </LinearLayout>

        <!--=============== STATUS ===============-->

        <ImageView
            android:id="@+id/status_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:easyApiStatus="@{viewModel.status}" />
    </FrameLayout>
</layout>